--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -64,7 +64,7 @@
   </div>
   <div>
     {% for menu_item in job_seeker_header_menu.get_items %}
-      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
+      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12" width="84" height="70" href="{{ function('convert_link_locale', menu_item.link, site.site_url, site.url) }}">{{ menu_item.title }}</a>
     {% endfor %}
   </div>
   <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
