--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -50,7 +50,7 @@
       <section class="pb-8" id="announcements">
         <div class="site-max-width py-2 tablet:py-8">
           <div>
-            <h2 class="h3 text-alt mt-0">{{ __('Announcements', 'WNYC') }}</h2>
+            <h2 class="h3 text-alt mt-0 text-[44px]">{{ __('Announcements', 'WNYC') }}</h2>
 
             <div class="py-4 grid gap-6 tablet:grid-cols-2 tablet:gap-8">
               {% for announcement in announcements %}
