--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -1,12 +1,6 @@
 <nav aria-label="{{ job_seeker_header_menu.name }}" class="bg-[#F8F9FB] px-2 tablet:px-5 desktop:px-3 py-1 flex justify-between align-middle items-center" data-js="navigation">
   <div class="flex">
-    <a class="tablet:hidden" 
-    {% if options.job_seekers_link is defined %}
-      href="{{ options.job_seekers_link }}"
-    {% else %}
-      href="{{ site.url }}"
-    {% endif %}
-    >
+    <a class="tablet:hidden" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
       <svg class="o-navigation__svg fill-text text-brand" width="60" height="11">
         <title>{{ __('Jobs NYC jobseeker homepage', 'WNYC - Navigation') }}</title>
         <use href="#logo-jobs-nyc-black-blue"></use>
@@ -48,13 +42,7 @@
 {% include 'search/search-overlay.twig' %}
 <nav aria-label="{{ job_seeker_header_menu.name }}" class="flex justify-between border-t-4 border-[#2D3282] px-2 tablet:px-5 desktop:px-3 py-2 desktop:py-3 bg-white" data-js="navigation">
   <div class="items-center flex bg-scale-1 tablet:bg-transparent">
-    <a class="pr-2 hidden tablet:block" 
-    {% if options.job_seekers_link is defined %}
-      href="{{ options.job_seekers_link }}"
-    {% else %}
-      href="{{ site.url }}"
-    {% endif %}
-    >
+    <a class="pr-2 hidden tablet:block" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
       <svg class="o-navigation__svg fill-text text-brand" width="206" height="22">
         <title>{{ __('Jobs NYC jobseeker homepage', 'WNYC - Navigation') }}</title>
         <use href="#logo-jobs-nyc-jobseeker"></use>
