--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -4,8 +4,8 @@
 <div class="bg-scale-2">
   <main class="bg-scale-1" id="content">
     {# Header Section #}
-    <div class="px-2 tablet:px-7 desktop:px-[104px] bg-[#E3F1FD] ">
-      <header class="desktop:py-7 tablet:py-6 py-5">
+    <div class="bg-[#E3F1FD]">
+      <header class="site-max-width desktop:py-7 tablet:py-6 py-5">
         <div class="w-full">
         {% include 'components/breadcrumbs.twig' with {
               crumbs: [
@@ -42,13 +42,13 @@
     {% if sections %}
     <div class="bg-scale-0">
       <div class="site-max-width pb-8 mb-8">
-        <div class="py-4">
+        <div>
           {% for section in sections %}
-          <section {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
+          <section {% if not loop.last %}class="desktop:pb-7 tablet:pb-6 pb-5"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
             {% if section.section_title %}
-            <div class="pt-utility-anchor bg-scale-0 sticky top-0 z-10">
+            <div class="pt-5 tablet:pt-6 desktop:pt-7 bg-scale-0 sticky top-0 z-10">
               <div>
-                <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
+                <h3 class="mb-3 text-alt border-b border-scale-4 pb-2 tablet:pb-3">
                   {{ section.section_title }}
                 </h3>
               </div>
