--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -5,20 +5,7 @@
       <header class="o-header block px-4 tablet:px-6">
         <div class="tablet:px-6 max-w-[896px]">
           <div class="c-utility p-0 min-h-0 mb-3">
-            <a class="link-icon mie-auto" 
-            {% if employer == true %}
-              {% if options.employers_link is defined %}
-                href="{{ options.employers_link }}"
-              {% else %}
-                href="{{ site.url }}"
-              {% endif %}
-            {% else %}
-              {% if options.job_seekers_link is defined %}
-                href="{{ options.job_seekers_link }}"
-              {% else %}
-                href="{{ site.url }}"
-              {% endif %}
-            {% endif %}>
+            <a class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
               <svg aria-hidden="true" class="icon-ui rtl:flip">
                 <use href="#lucide-chevron-left"></use>
               </svg>
