--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -41,7 +41,7 @@
       {# Collections #}
       {% if collections %}
         {% for collection in collections %}
-          {% include collection.template with {this: collection, is_home: true} only %}
+          {% include collection.template with {this: collection, is_home: true, site: site} only %}
         {% endfor %}
       {% endif %}
 
