--- a/wp-content/themes/workingnyc/views/archive.twig
+++ b/wp-content/themes/workingnyc/views/archive.twig
@@ -23,17 +23,9 @@
               <nav class="o-header__breadcrumbs" aria-label="Breadcrumb">
                 <a data-js="home-link" 
                 {% if employer == true %}
-                  {% if options.employers_link is defined %}
-                    href="{{ options.employers_link }}"
-                  {% else %}
-                    href="{{ site.url }}"
-                  {% endif %}
+                    href="{{ function('convert_link_locale', site.site_url ~ '/employers' , site.site_url, site.url) }}"
                 {% else %}
-                  {% if options.job_seekers_link is defined %}
-                    href="{{ options.job_seekers_link }}"
-                  {% else %}
-                    href="{{ site.url }}"
-                  {% endif %}
+                    href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}"
                 {% endif %}
                 >{{ __('Home', 'WNYC') }}</a>
 
