--- a/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
+++ b/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
@@ -1,6 +1,6 @@
 {# @Type   Element #}
 {# @For    Generic Templates #}
-<nav class="breadcrumbs flex" aria-label="Breadcrumb">
+<nav class="breadcrumbs flex flex-wrap" aria-label="Breadcrumb">
   <a
   {% if employer == true %}
       href="{{ function('convert_link_locale', site.site_url ~ '/employers' , site.site_url, site.url) }}"
