--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -1,13 +1,13 @@
-{% if talent_portal_landing_page == false %}
-    <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative px-2 py-3 tablet:px-8 tablet:py-5 max-w-[1440px] mx-auto" role="contentinfo">
-    <div>
+{% if hide_jobseeker_and_employer_navigation == false %}
+    <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative py-3 tablet:py-5 bg-white" role="contentinfo">
+    <div class="site-max-width">
     <nav class="o-attribution__flex">
         <div class="flex flex-col tablet:flex-row desktop:flex-col w-fit tablet:w-full desktop:w-fit justify-start tablet:justify-between desktop:justify-start items-start tablet:items-center desktop:items-start pb-3 desktop:pb-0 gap-2 tablet:gap-5">
             <div>
             <span class="footer-font">{{ options.feedback_prompt }}</span>
             </div>
             <div class="tablet:float-right desktop:float-left">
-            <a class="btn btn-secondary pointer-events-auto" target="_blank" rel="noopener"
+            <a class="px-2 py-1 tablet:px-3 tablet:py-2 text-[16px] tablet:text-[20px] font-[500] tablet:font-[600] btn-secondary pointer-events-auto" target="_blank" rel="noopener"
                 {% if employer %}
                 href="{{ options.feedback_form_link }}"
                 {% else %}
@@ -16,14 +16,14 @@
                 >Send us feedback</a>
             </div>
         </div>
-        <div class="hidden desktop:grid grid-cols-2 gap-1 float-right w-[440px]">
+        <div class="hidden desktop:grid grid-cols-2 gap-y-1 gap-x-2 tablet:gap-x-5 float-right w-[440px]">
             {% if employer %}
                 {% set footer_menu_to_use = employer_footer_menu %}
             {% else %}
                 {% set footer_menu_to_use = job_seeker_footer_menu %}
             {% endif %}
             {% for m in footer_menu_to_use.get_items %}
-                <a class="inline mr-2 desktop:mr-3 tablet:mr-3" href="{{ function('convert_link_locale', m.link, site.site_url, site.url) }}"
+                <a class="inline mr-2 desktop:mr-3 tablet:mr-3 text-[14px] font-[500] text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', m.link, site.site_url, site.url) }}"
                 {% if m.attr_title %}title="{{ m.attr_title }}"{% endif %}
                 {% if m.target %}target="{{ m.target }}"{% endif %}
                 {% if m.xfn %}rel="{{ m.xfn }}"{% endif %}>
@@ -33,14 +33,14 @@
         </div>
     </nav>
     <nav class="o-attribution__flex border-t border-[#ADB2B9] pt-3 items-start desktop:hidden">
-        <div class="grid grid-cols-2 gap-1 tablet:float-right w-full tablet:w-fit">
+        <div class="grid grid-cols-2 gap-y-1 gap-x-2 tablet:gap-x-5 tablet:float-right w-full tablet:w-fit">
             {% if employer %}
                 {% set footer_menu_to_use = employer_footer_menu %}
             {% else %}
                 {% set footer_menu_to_use = job_seeker_footer_menu %}
             {% endif %}
             {% for m in footer_menu_to_use.get_items %}
-                <a class="inline mr-2 desktop:mr-3 tablet:mr-3" href="{{ function('convert_link_locale', m.link, site.site_url, site.url) }}"
+                <a class="inline mr-2 desktop:mr-3 tablet:mr-3 text-[14px] font-[500] text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', m.link, site.site_url, site.url) }}"
                 {% if m.attr_title %}title="{{ m.attr_title }}"{% endif %}
                 {% if m.target %}target="{{ m.target }}"{% endif %}
                 {% if m.xfn %}rel="{{ m.xfn }}"{% endif %}>
