--- a/wp-content/themes/workingnyc/views/objects/menu.twig
+++ b/wp-content/themes/workingnyc/views/objects/menu.twig
@@ -4,11 +4,11 @@
       <nav class="o-menu__nav" aria-label="{{ __('Menu', 'WNYC') }}">
         {% if employer == true %}
           {% for menu_item in employer_header_menu.get_items %}
-            <a class="o-menu__nav-item py-2" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1">{{ menu_item.title }}</a>
+            <a class="o-menu__nav-item py-2 text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1">{{ menu_item.title }}</a>
           {% endfor %}
         {% else %}
           {% for menu_item in job_seeker_header_menu.get_items %}
-            <a class="o-menu__nav-item py-2" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1">{{ menu_item.title }}</a>
+            <a class="o-menu__nav-item py-2 text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1">{{ menu_item.title }}</a>
           {% endfor %}
         {% endif %}
       </nav>
