--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -21,7 +21,7 @@
         {% if this.guides %}
         <div class="grid tablet:grid-cols-2 gap-3">
         {% else %}
-        <div class="grid grid-cols-1 tablet:grid-cols-2 gap-3">
+        <div class="grid grid-cols-1 desktop:grid-cols-3 tablet:grid-cols-2 gap-3">
         {% endif %}
           {% for post in this.posts %}
               <div class="max-w-full">
