--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -21,7 +21,11 @@
         {% if this.guides %}
         <div class="grid tablet:grid-cols-2 gap-3 auto-rows-[1fr]">
         {% else %}
-        <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
+          {% if this.post.post_type == 'job-boards' %}
+          <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
+          {% else %}
+          <div class="grid grid-cols-1 tablet:grid-cols-2 gap-3 auto-rows-[1fr]">
+          {% endif %}
         {% endif %}
           {% for post in this.posts %}
               <div class="max-w-full">
