--- a/wp-content/themes/workingnyc/views/job-boards/job-board.twig
+++ b/wp-content/themes/workingnyc/views/job-boards/job-board.twig
@@ -3,7 +3,7 @@
 <article class="w-full h-full border-4 border-[#F0F6FA]">
   <header class="min-h-[142px] bg-[#F0F6FA] px-5 py-3">
     <div class="text-[20px] tablet:text-[23px] font-[600] text-[#080707] mb-1">{{ post.post_title }}</div>
-    <div class="text-[18px] tablet:text-[20px] font-[400] text-[#0C264D]">{{ post.agency}}</div>
+    <div class="text-[18px] tablet:text-[20px] text-[#0C264D]">{{ post.agency}}</div>
   </header>
   <div class="py-3 px-5">
     <div class="text-[18px] mb-3 min-h-[75px] leading-[1.3]">{{ post.description }}</div>
