--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -21,7 +21,7 @@
         {% if this.guides %}
         <div class="grid tablet:grid-cols-2 gap-3 auto-rows-[1fr]">
         {% else %}
-          {% if this.post.post_type == 'job-boards' %}
+          {% if this.post.post_type == 'job-boards' and not is_home %}
           <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
           {% else %}
           <div class="grid grid-cols-1 tablet:grid-cols-2 gap-3 auto-rows-[1fr]">
