--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -7,7 +7,7 @@
       <header class="o-header block px-4 tablet:px-6">
         <div class="tablet:px-6 max-w-[896px]">
           <div class="c-utility p-0 min-h-0 mb-3">
-            <a class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
+            <a data-js="home-link" class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
               <svg aria-hidden="true" class="icon-ui rtl:flip">
                 <use href="#lucide-chevron-left"></use>
               </svg>
@@ -15,7 +15,7 @@
             </a>
           </div>
           <div class="o-header__title mt-0" style="">
-            <h1 id="page-heading" class="o-header__heading">{{ term == '' ? __('Search', 'WNYC') : __('Search results', 'WNYC')}}</h1>
+            <h1 data-js="title" id="page-heading" class="o-header__heading">{{ __('Search results', 'WNYC')}}</h1>
           </div>
           {% include 'search/search-form.twig' %}
           </div>
