--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if term == ''%}
-<div>
+{# <div>
   <div class="bg-scale-4">
       <header class="o-header block px-4 tablet:px-6">
         <div class="tablet:px-6 max-w-[896px]">
@@ -15,11 +15,33 @@
             </a>
           </div>
           <div class="o-header__title mt-0" style="">
-            <h1 data-js="title" id="page-heading" class="o-header__heading">{{ __('Search results', 'WNYC')}}</h1>
+            <h1 data-js="title" id="page-heading" class="o-header__heading">{{ __('Search', 'WNYC')}}</h1>
           </div>
           {% include 'search/search-form.twig' %}
           </div>
       </header>
+  </div>
+</div> #}
+<div class="bg-[#EEF4FF]">
+  <div class="site-max-width">
+    <header class="o-header">
+      <div>
+        <nav class="o-header__breadcrumbs" aria-label="Breadcrumb">
+          <a data-js="home-link" class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">{{ __('Home', 'WNYC') }}</a>
+          <svg aria-hidden="true" class="o-header__breadcrumbs-chevron icon-ui rtl:flip">
+            <use href="#lucide-chevron-right"></use>
+          </svg>
+
+          <b aria-current="page">Search</b>
+        </nav>
+
+        <div class="o-header__title">
+          <h1 id="page-heading" class="o-header__heading">Search</h1>
+        </div>
+
+        {% include 'search/search-form.twig' %}
+      </div>
+    </header>
   </div>
 </div>
 {% else %}
@@ -28,7 +50,7 @@
       <header class="o-header block px-4 tablet:px-6">
         <div class="tablet:px-6 max-w-[896px]">
           <div class="c-utility p-0 min-h-0 mb-3">
-            <a class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
+            <a data-js="home-link" class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
               <svg aria-hidden="true" class="icon-ui rtl:flip">
                 <use href="#lucide-chevron-left"></use>
               </svg>
@@ -45,49 +67,47 @@
 
   <div>
     <section class="px-4 tablet:px-6">
-      {% if term != '' %}
-        {% if posts|length > 0 %}
-          {% block list_sidebar %}
+      {% if posts|length > 0 %}
+        {% block list_sidebar %}
+        {% endblock %}
+        <div class="tablet:px-6">
+          {% block before_list %}
+          <h2 class="text-p font-p inline-block mt-4 mb-2">
+            {% if posts|length > 1 %}
+              {{ __('Showing {{ TOTAL_VISIBLE }} results for "{{ TERM }}".', 'WNYC')|replace({'{{ TOTAL_VISIBLE }}': posts|length, '{{ TERM }}': term}) }}
+            {% else %}
+              {{ __('Showing 1 result for "{{ TERM }}".', 'WNYC')|replace({'{{ TERM }}': term}) }}
+            {% endif %}
+          </h2>
           {% endblock %}
-          <div class="tablet:px-6">
-            {% block before_list %}
-            <h2 class="text-p font-p inline-block mt-4 mb-2">
-              {% if posts|length > 1 %}
-                {{ __('Showing {{ TOTAL_VISIBLE }} results for "{{ TERM }}".', 'WNYC')|replace({'{{ TOTAL_VISIBLE }}': posts|length, '{{ TERM }}': term}) }}
-              {% else %}
-                {{ __('Showing 1 result for "{{ TERM }}".', 'WNYC')|replace({'{{ TERM }}': term}) }}
-              {% endif %}
-            </h2>
+          <div class="grid gap-3 desktop:grid-cols-2 mb-3">
+            {% block post_list %}
+              {% for post in posts %}
+                  <div data-js="search-result" data-js-result-type="program">
+                    {% include 'programs/program.twig' with {
+                      this: {
+                        post: post
+                      }
+                    } %}
+                  </div>
+              {% endfor %}
             {% endblock %}
-            <div class="grid gap-3 desktop:grid-cols-2 mb-3">
-              {% block post_list %}
-                {% for post in posts %}
-                    <div data-js="search-result" data-js-result-type="program">
-                      {% include 'programs/program.twig' with {
-                        this: {
-                          post: post
-                        }
-                      } %}
-                    </div>
-                {% endfor %}
-              {% endblock %}
-            </div>
-            {% block after_list %}
-            {% endblock %}
-          </div> 
-        {% else %}
-        <div class="my-3 tablet:my-4 tablet:px-6">
-          <h4>{{__('No results for "{{ TERM }}"', 'WNYC')|replace({'{{ TERM }}': term})}}</h4>
-          <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('Search help', 'WNYC')}}</h5>
-          <list>
-            <li class="m-0">{{__('Check your search for typos', 'WNYC')}}</li>
-            <li class="m-0">{{__('Use generic search terms', 'WNYC')}}</li>
-            <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a>', 'WNYC')|replace({'{{ PROGRAMS_URL }}': site.url|last == '/' ? site.url ~ 'jobseekers/programs' : site.url ~ '/jobseekers/programs'})}}</li>
-          </list>
-          <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.', 'WNYC')|replace({'{{ FEEDBACK }}': 
-            '<a class="link-icon" href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback <svg aria-hidden="true" class="icon-ui rtl:flip"><use href="#lucide-external-link"></use></svg></a>'})}}</h5>
-        </div>
-        {% endif %}
+          </div>
+          {% block after_list %}
+          {% endblock %}
+        </div> 
+      {% else %}
+      <div class="my-3 tablet:my-4 tablet:px-6">
+        <h4>{{__('No results for "{{ TERM }}"', 'WNYC')|replace({'{{ TERM }}': term})}}</h4>
+        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('Search help', 'WNYC')}}</h5>
+        <list>
+          <li class="m-0">{{__('Check your search for typos', 'WNYC')}}</li>
+          <li class="m-0">{{__('Use generic search terms', 'WNYC')}}</li>
+          <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a>', 'WNYC')|replace({'{{ PROGRAMS_URL }}': site.url|last == '/' ? site.url ~ 'jobseekers/programs' : site.url ~ '/jobseekers/programs'})}}</li>
+        </list>
+        <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.', 'WNYC')|replace({'{{ FEEDBACK }}': 
+          '<a class="link-icon" href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback <svg aria-hidden="true" class="icon-ui rtl:flip"><use href="#lucide-external-link"></use></svg></a>'})}}</h5>
+      </div>
       {% endif %}
     </section>
   </div>
