add second container

--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <div class="bg-[#F4F7FA] tablet:bg-white tablet:px-[104px] max-w-[1440px] desktop:mx-auto tablet:py-7">
+    <div class="bg-[#F4F7FA] tablet:bg-white tablet:px-[104px] max-w-[1440px] desktop:mx-auto pb-2 tablet:py-7">
         <div class="desktop:grid desktop:grid-cols-[1fr_1.15fr] items-center tablet:gap-x-6">
             <img class="w-full h-[420px] object-cover mb-4 desktop:mb-0" src="{{ post.meta('container_image').url }}" alt="{{ post.meta('container_image').alt }}"/>
             <div class="text-center tablet:text-left px-3 tablet:px-0 desktop-max-h-304 w-full">
@@ -54,6 +54,27 @@
             </div>
         </div>
     </div>
+
+    {% if post.meta('container_header_2') != "" %}
+    <div class="bg-[#F4F7FA] tablet:bg-white tablet:px-[104px] max-w-[1440px] desktop:mx-auto pb-2 tablet:py-7">
+        <div class="desktop:grid desktop:grid-cols-[1fr_1.15fr] items-center tablet:gap-x-6">
+            <img class="w-full h-[420px] object-cover mb-4 desktop:hidden" src="{{ post.meta('container_image_2').url }}" alt="{{ post.meta('container_image_2').alt }}"/>
+            <div class="text-center tablet:text-left px-3 tablet:px-0 desktop-max-h-304 w-full">
+                <h2 class="mb-4 font-[600]">{{ post.meta('container_header_2') }}</h2>
+                <div class="text-[16px] mb-4">{{ post.meta('container_subtitle_2') }}</div>
+                <div>
+                    <a class="btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ post.meta('container_link_2').target }}" href="{{ post.meta('container_link_2').url }}">
+                        {{ post.meta('container_link_2').title }}
+                        <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
+                            <use href="#lucide-arrow-right"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <img class="w-full h-[420px] object-cover mb-0 hidden desktop:block" src="{{ post.meta('container_image_2').url }}" alt="{{ post.meta('container_image_2').alt }}"/>
+        </div>
+    </div>
+    {% endif %}
 
     <div class="layout-content text-center py-5 tablet:py-6 desktop:py-7 px-2 tablet:px-[104px] max-w-[1440px] desktop:mx-auto">
         <h2 class="mb-4">{{ post.meta('agency_partners_text') }}</h2>
