fix button overflow on program page

--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -264,7 +264,7 @@
 
     {# Links #}
     <section class="desktop:max-w-[963px] site-max-width bg-scale-1 py-4 pb-8" id="contact">
-      <nav class="grid gap-1" aria-label="{{ __('Contact Information', 'WNYC') }}">
+      <nav class="grid grid-cols-1 gap-1" aria-label="{{ __('Contact Information', 'WNYC') }}">
         {% if post.program_learn_more %}
         <a class="btn btn-secondary w-full" href="{{ post.program_learn_more }}" target="_blank" rel="noopener">
           <span>{{ post.link_label }}</span>
