--- a/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
@@ -2,17 +2,17 @@
 {# @For    Post Type #}
 {# @Class  timber-posts/Programs.php #}
 {# For homepage collection #}
-<article class="rounded border border-[#ECEFF2] p-3 w-full h-full">
+<article class="rounded-[5px] border-2 border-[#ECEFF2]  p-3 w-full h-full">
   <header class="pb-2 desktop:pb-3">
-    <img class="w-[150px] h-70 object-contain object-left" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
+    <img class="w-[150px] h-[70px] object-contain object-left p-[4px] pb-0" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
   </header>
   <div>
     <div class="pb-2 desktop:pb-3 max-h-[90px]">
-      <a href="{{ post.link }}">
-        <h5 class="pb-1 font-[600] text-[22.78px]">{{ post.employer_program_title }}</h5>
+      <a href="{{ post.link }}" class="no-underline">
+        <h5 class="font-[600] text-[22.78px]">{{ post.employer_program_title }}</h5>
       </a>
     </div>
-    <div class="pb-2 desktop:pb-3 text-[20.25px] max-h-[90px]">
+    <div class="text-[20.25px] max-h-[90px]">
       {{ post.employer_program_preview }}
     </div>
   </div>
