--- a/wp-content/themes/workingnyc/views/base.twig
+++ b/wp-content/themes/workingnyc/views/base.twig
@@ -34,7 +34,7 @@
 
   {% set navigationSpacing = 'pb-8 mb-2 tablet:pb-0 tablet:mb-0' %}
 
-  <body class="bg pb-0">
+  <body class="bg bg-scale-0 pb-0">
     {{ fn('wp_body_open') }}
 
     <a class="sr-only" href="#content">{{ __('Skip to main content', 'WNYC') }}</a>
