removed_max_hight

--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -31,7 +31,7 @@
         {% endif %}
           {% for post in this.posts %}
               {% if post.post_type == 'employer-programs' %}
-              <div class="max-w-full desktop:w-[400px] w-[343px] desktop:h-[286px] tablet:h-[261px] h-[245px]">
+              <div class="max-w-full desktop:min-h-[286px] tablet:min-h-[261px] min-h-[245px]">
               {% else %}
               <div class="max-w-full">
               {% endif %}
