change_max_to_min

--- a/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
@@ -12,7 +12,7 @@
         <h5 class="font-[600] text-[23px]">{{ post.employer_program_title }}</h5>
       </a>
     </div>
-    <div class="text-[20px] max-h-[90px]">
+    <div class="text-[20px] min-h-[90px]">
       {{ post.employer_program_preview }}
     </div>
   </div>
