--- a/wp-content/themes/workingnyc/views/objects/global-footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/global-footer.twig
@@ -1,5 +1,5 @@
-<footer aria-label="{{ __('Footer', 'WNYC') }}" class="bg-[#F8F9FB] relative py-3 tablet:py-5" role="contentinfo">
-    <div class="site-max-width">
+<footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative py-3 tablet:py-5" role="contentinfo">
+    <div class="site-max-width drop-shadow ">
         <nav class="o-attribution__flex border-b border-[#ADB2B9] pb-3 desktop:pb-3">
             <div class="tablet:float-left desktop:float-left pb-3 tablet:pb-0 desktop:pb-0">
                 <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand pb-1" width="97" height="32">
