employer_card_changes

--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -23,8 +23,8 @@
         {% else %}
           {% if this.post.post_type == 'job-boards' and not is_home %}
           <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
-          {% else %}
-          <div class="grid grid-cols-1 tablet:grid-cols-2 gap-3 auto-rows-[1fr]">
+          {% elseif this.post.post_type == 'employer-programs' %}
+          <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
           {% endif %}
         {% endif %}
           {% for post in this.posts %}
