change_seerch_page

--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="bg-scale-4">
-      <header class="o-header block px-4 tablet:px-6">
+      <header class=" site-max-width o-header block px-4 tablet:px-6">
         <div class="tablet:px-6 max-w-[896px]">
           <div class="c-utility p-0 min-h-0 mb-3">
             <a class="link-icon mie-auto" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
